--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant?serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant?serverTimezone=UTC
 spring.datasource.username=eyasu
 spring.datasource.password=password
 spring.jpa.show-sql=true
