--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/restaurant?serverTimezone=UTC
 spring.datasource.username=eyasu
 spring.datasource.password=password
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+#spring.aop.proxy-target-class=false
 #spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/students?serverTimezone=UTC
 #spring.datasource.username=root
